# demiurge

./: .gitignore  CLAUDE.md  README.md  bootstrap.sh  eks-deploy-research.md  justfile
.claude/: new-rl-progress.md
.claude/agents/: ai-safety-architect.md  application-architect.md  cloud-native-architect.md  concurrency-architect.md  data-architect.md  domain-architect.md  eda-specialist.md  healthcare-informatics-architect.md  history-investigator.md  integration-architect.md  llm-architect.md  log-investigator.md  ml-platform-architect.md  (+4 more)
docs/: investigation-orchestration-implementation.md  investigation-orchestration-system.md  plan-improve-deep-research.md
practice/type-a-rag/: .gitignore  README.md  pyproject.toml
practice/type-a-rag/data/: aspirin_clinical_review.txt  drug_interactions_guide.txt  metformin_overview.txt
practice/type-a-rag/src/rag/: __init__.py  cli.py  embedder.py  loader.py  splitter.py  store.py
practice/type-a-rag/tests/: test_embedder.py  test_loader.py  test_splitter.py  test_store.py
research/: perplexity-architecture-corrected.md
scripts/demi/: .gitignore  README.md  pyproject.toml
scripts/demi/reports/plugin-stats/: latest.md
scripts/demi/reports/plugin-stats/snapshots/: 2026-05-28.json  2026-06-01.json  2026-06-08.json  2026-06-15.json
scripts/demi/src/demi/: __init__.py  cli.py
scripts/demi/src/demi/plugin_stats/: analyzer.py  collector.py  commands.py  models.py  reporter.py
scripts/demi/tests/plugin-stats/: conftest.py  test_analyzer.py  test_cli.py  test_collector.py  test_models.py  test_reporter.py
(+133 files in other folders)
