[project]
name = "type-a-rag"
version = "0.1.0"
description = "RAG Pipeline Practice - Type A (Step by Step)"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "numpy>=1.24.0",
    "typer>=0.9.0",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
rag = "rag.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

# --- Ruff ---
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
